vax var created

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .Ruserdata
 00_REDCap-API-linkage.R
 resources/MPX CaseControl DQ Checks-v01.docx
+manuscript/emails/RE_ CDC Mpox study - biweekly report reminder.msg
+manuscript/emails/Insightful email responses.docx
