--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 resources/MPX CaseControl DQ Checks-v01.docx
 manuscript/emails/RE_ CDC Mpox study - biweekly report reminder.msg
 manuscript/emails/Insightful email responses.docx
+data/
