pre AF code addition

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 .RData
 .Ruserdata
 00_REDCap-API-linkage.R
-resources/MPX CaseControl DQ Checks-v01.docx
+data/
+dq-checks/
+screenshots/
+resources/
 manuscript/emails/RE_ CDC Mpox study - biweekly report reminder.msg
 manuscript/emails/Insightful email responses.docx
-data/
+
