--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ resources/
 manuscript/emails/RE_ CDC Mpox study - biweekly report reminder.msg
 manuscript/emails/Insightful email responses.docx
 
+vax_linelist_2023-02-13.csv
