index and vax dates corrected

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/
 dq-checks/
 screenshots/
 resources/
+mpox_shared-drive-programs/
 manuscript/emails/RE_ CDC Mpox study - biweekly report reminder.msg
 manuscript/emails/Insightful email responses.docx
 
